--- a/Water source/Water source.vcxproj
+++ b/Water source/Water source.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Text Include="map_1.txt" />
     <Text Include="map_2.txt" />
+    <Text Include="map_3.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
